[gd_scene load_steps=11 format=4 uid="uid://drys5fr7ak3jl"]

[ext_resource type="TileSet" uid="uid://dvrbkuapcr681" path="res://tilesets/tileset.tres" id="1_fpqf5"]
[ext_resource type="Script" uid="uid://b2n1hu1yb5y6" path="res://bridge.gd" id="1_xu807"]
[ext_resource type="Script" uid="uid://chog6erra3xbw" path="res://auto_hide.gd" id="3_nlbgg"]
[ext_resource type="PackedScene" uid="uid://dre5psaq1igux" path="res://steps.tscn" id="3_xy2vu"]
[ext_resource type="PackedScene" uid="uid://dctn3y7a7wbhe" path="res://steps2.tscn" id="4_tynux"]
[ext_resource type="Texture2D" uid="uid://g5jc1m7d74xn" path="res://tilesets/building_0.png" id="6_0n2te"]
[ext_resource type="PackedScene" uid="uid://dsng4db15ns5j" path="res://pilar.tscn" id="6_25uw4"]
[ext_resource type="Script" uid="uid://ddee7be1iarx6" path="res://IsometricBlock.gd" id="7_6xinw"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_ewbyb"]
points = PackedVector2Array(384, 175, 32, -1, -417, 223, -64, 399)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n2te"]
atlas = ExtResource("6_0n2te")
region = Rect2(0, 0, 64, 64)

[node name="Bridge" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_xu807")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_ewbyb")

[node name="ground" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAABgAAAAAAAAAAAAEABgAAAAAAAAAAAAIABgAAAAAAAAAAAAMAAwAAAAEAAAABAAAABgAAAAAAAAABAAEABgAAAAAAAAABAAIABgAAAAAAAAABAAMABgAAAAAAAAACAAAABgAAAAAAAAACAAEABgAAAAAAAAACAAIABgAAAAAAAAACAAMABgAAAAAAAAADAAAABgAAAAAAAAADAAEAAwAAAAEAAAADAAIABgAAAAAAAAADAAMABgAAAAAAAAAEAAAABgAAAAAAAAAEAAEABgAAAAAAAAAEAAIABgAAAAAAAAAEAAMABgAAAAAAAAAFAAAABgAAAAAAAAAFAAEABgAAAAAAAAAFAAIABgAAAAAAAAAFAAMABgAAAAAAAAAAAAQAAwAAAAEAAAAAAAUABgAAAAAAAAAAAAYABgAAAAAAAAAAAAcABgAAAAAAAAAAAAgABgAAAAAAAAAAAAkABgAAAAAAAAAAAAoABgAAAAAAAAAAAAsABgAAAAAAAAAAAAwABgAAAAAAAAAAAA0ABgAAAAAAAAABAAQABgAAAAAAAAABAAUABgAAAAAAAAABAAYABgAAAAAAAAABAAcABgAAAAAAAAABAAgABgAAAAAAAAABAAkABgAAAAAAAAABAAoABgAAAAAAAAABAAsABgAAAAAAAAABAAwABgAAAAAAAAABAA0ABgAAAAAAAAACAAQABgAAAAAAAAACAAUABgAAAAAAAAACAAYABgAAAAAAAAACAAcABgAAAAAAAAACAAgABgAAAAAAAAACAAkABgAAAAAAAAACAAoABgAAAAAAAAACAAsABgAAAAAAAAACAAwABgAAAAAAAAACAA0ABgAAAAAAAAADAAQABgAAAAAAAAADAAUABgAAAAAAAAADAAYABgAAAAAAAAADAAcABgAAAAAAAAADAAgABgAAAAAAAAADAAkABgAAAAAAAAADAAoABgAAAAAAAAADAAsABgAAAAAAAAADAAwABgAAAAAAAAADAA0AAwAAAAEAAAAEAAQABgAAAAAAAAAEAAUABgAAAAAAAAAEAAYABgAAAAAAAAAEAAcABgAAAAAAAAAEAAgABgAAAAAAAAAEAAoABgAAAAAAAAAEAAsABgAAAAAAAAAEAAwABgAAAAAAAAAEAA0ABgAAAAAAAAAFAAQABgAAAAAAAAAFAAUABgAAAAAAAAAFAAYABgAAAAAAAAAFAAcABgAAAAAAAAAFAAgABgAAAAAAAAAFAAkABgAAAAAAAAAFAAoAAwAAAAEAAAAFAAwABgAAAAAAAAAFAA0ABgAAAAAAAAAGAAAABgAAAAAAAAAGAAEABgAAAAAAAAAGAAIABgAAAAAAAAAGAAMAAwAAAAEAAAAGAAQABgAAAAAAAAAGAAUABgAAAAAAAAAGAAYABgAAAAAAAAAGAAcABgAAAAAAAAAGAAgABgAAAAAAAAAGAAkABgAAAAAAAAAGAAoABgAAAAAAAAAGAAsABgAAAAAAAAAGAAwABgAAAAAAAAAGAA0ABgAAAAAAAAAHAAAABgAAAAAAAAAHAAEABgAAAAAAAAAHAAIABgAAAAAAAAAHAAMABgAAAAAAAAAHAAQABgAAAAAAAAAHAAUABgAAAAAAAAAHAAYABgAAAAAAAAAHAAcABgAAAAAAAAAHAAgABgAAAAAAAAAHAAkABgAAAAAAAAAHAAoABgAAAAAAAAAHAAsABgAAAAAAAAAHAAwABgAAAAAAAAAHAA0ABgAAAAAAAAAIAAAABgAAAAAAAAAIAAEABgAAAAAAAAAIAAIABgAAAAAAAAAIAAMABgAAAAAAAAAIAAQABgAAAAAAAAAIAAUABgAAAAAAAAAIAAYABgAAAAAAAAAIAAcABgAAAAAAAAAIAAgABgAAAAAAAAAIAAkABgAAAAAAAAAIAAoABgAAAAAAAAAIAAsABgAAAAAAAAAIAAwABgAAAAAAAAAIAA0ABgAAAAAAAAAJAAAABgAAAAAAAAAJAAEAAwAAAAEAAAAJAAIABgAAAAAAAAAJAAMABgAAAAAAAAAJAAQABgAAAAAAAAAJAAUABgAAAAAAAAAJAAYABgAAAAAAAAAJAAcABgAAAAAAAAAJAAgABgAAAAAAAAAJAAkABgAAAAAAAAAJAAoABgAAAAAAAAAJAAsABgAAAAAAAAAJAAwABgAAAAAAAAAJAA0AAwAAAAEAAAAKAAAABgAAAAAAAAAKAAEABgAAAAAAAAAKAAIABgAAAAAAAAAKAAMABgAAAAAAAAAKAAQABgAAAAAAAAAKAAUABgAAAAAAAAAKAAYABgAAAAAAAAAKAAcABgAAAAAAAAAKAAgABgAAAAAAAAAKAAkABgAAAAAAAAAKAAoABgAAAAAAAAAKAAsABgAAAAAAAAAKAAwABgAAAAAAAAAKAA0ABgAAAAAAAAAFAAsABgAAAAAAAAAEAAkABgAAAAAAAAD//wEAAwACAAUAAAD+/wAAAwACAAIAAAD+/wMAAwAAAAEAAAD//wMAAwAAAAEAAAA=")
tile_set = ExtResource("1_fpqf5")

[node name="steps" parent="ground" instance=ExtResource("3_xy2vu")]
position = Vector2(-160, 272)
layer1 = 524288
collision_layer = 1048576
layer2 = 2097152

[node name="steps2" parent="ground" instance=ExtResource("4_tynux")]
position = Vector2(160, 176)
layer1 = 524288
collision_layer = 1048576
layer2 = 2097152

[node name="pilar5" parent="ground" instance=ExtResource("6_25uw4")]
show_behind_parent = true
position = Vector2(-96, 48)

[node name="pilar6" parent="ground" instance=ExtResource("6_25uw4")]
show_behind_parent = true
position = Vector2(-128, 32)

[node name="Sprite2D5" type="Sprite2D" parent="ground"]
show_behind_parent = true
position = Vector2(-64, 64)
texture = SubResource("AtlasTexture_0n2te")
offset = Vector2(0, -16)
script = ExtResource("7_6xinw")

[node name="steps3" parent="ground" instance=ExtResource("3_xy2vu")]
position = Vector2(-128, 96)
layer1 = 524288
collision_layer = 1048576
layer2 = 2097152

[node name="steps4" parent="ground/steps3" instance=ExtResource("4_tynux")]
position = Vector2(32, -112)
layer1 = 2097152
collision_layer = 4194304
layer2 = 8388608

[node name="Sprite2D" type="Sprite2D" parent="ground/steps3"]
show_behind_parent = true
position = Vector2(64, -64)
texture = SubResource("AtlasTexture_0n2te")
offset = Vector2(0, -16)
script = ExtResource("7_6xinw")

[node name="pilar" parent="ground" instance=ExtResource("6_25uw4")]
position = Vector2(-96, 368)

[node name="pilar2" parent="ground" instance=ExtResource("6_25uw4")]
position = Vector2(-288, 272)

[node name="pilar3" parent="ground" instance=ExtResource("6_25uw4")]
position = Vector2(96, 80)

[node name="pilar4" parent="ground" instance=ExtResource("6_25uw4")]
position = Vector2(288, 176)

[node name="level1" type="TileMapLayer" parent="."]
visible = false
z_index = 2
y_sort_enabled = true
tile_map_data = PackedByteArray("AAABAAMAAAACAAEAAAACAAMAAAACAAEAAAABAP//AAACAAEAAAABAAAAAAACAAEAAAABAAEAAAACAAEAAAABAAIAAAACAAEAAAACAP//AAACAAEAAAACAAAAAAACAAEAAAACAAEAAAACAAEAAAACAAIAAAACAAEAAAABAAQAAAACAAEAAAABAAUAAAACAAEAAAABAAYAAAACAAEAAAABAAcAAAACAAEAAAABAAgAAAACAAEAAAABAAkAAAACAAEAAAABAAoAAAACAAEAAAABAAsAAAACAAEAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAACAAYAAAACAAEAAAACAAcAAAACAAEAAAACAAgAAAACAAEAAAACAAkAAAACAAEAAAACAAoAAAACAAEAAAACAAsAAAACAAEAAAADAP//AAACAAEAAAADAAAAAAACAAEAAAADAAEAAAACAAEAAAADAAIAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAADAAoAAAACAAEAAAADAAsAAAACAAEAAAAEAP//AAACAAEAAAAEAAAAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAEAAgAAAACAAEAAAAEAAkAAAACAAEAAAAEAAoAAAACAAEAAAAEAAsAAAACAAEAAAAFAP//AAACAAEAAAAFAAAAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAACAAEAAAAFAAcAAAACAAEAAAAFAAgAAAACAAEAAAAFAAkAAAACAAEAAAAFAAoAAAACAAEAAAAFAAsAAAACAAEAAAAGAP//AAACAAEAAAAGAAAAAAACAAEAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAwACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAACAAEAAAAGAAgAAwACAAEAAAAGAAkAAAACAAEAAAAGAAoAAAACAAEAAAAGAAsAAAACAAEAAAAHAP//AAACAAEAAAAHAAAAAAACAAEAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAwACAAEAAAAHAAcAAAACAAEAAAAHAAgAAAACAAEAAAAHAAkAAAACAAEAAAAHAAoAAAACAAEAAAAHAAsAAAACAAEAAAAIAP//AwACAAUAAAAIAAAAAwACAAUAAAAIAAEAAwACAAUAAAAIAAIAAwACAAUAAAAIAAMAAwACAAUAAAAIAAQAAwACAAUAAAAIAAUAAwACAAUAAAAIAAYAAwACAAUAAAAIAAcAAwACAAUAAAAIAAgAAwACAAUAAAAIAAkAAwACAAUAAAAIAAoAAwACAAUAAAAIAAsAAwACAAUAAAAHAAwAAwACAAQAAAAGAAwAAwACAAQAAAAFAAwAAwACAAQAAAAEAAwAAwACAAQAAAADAAwAAwACAAQAAAACAAwAAwACAAQAAAABAAwAAwACAAQAAAAAAAsAAwACAAMAAAAAAAoAAwACAAMAAAAAAAkAAwACAAMAAAAAAAgAAwACAAMAAAAAAAcAAwACAAMAAAAAAAYAAwACAAMAAAAAAAUAAwACAAMAAAAAAAQAAwACAAMAAAAAAAMAAwACAAMAAAAAAAIAAwACAAMAAAAAAAEAAwACAAMAAAAAAAAAAwACAAMAAAAAAP//AwACAAMAAAABAP7/AwACAAIAAAACAP7/AwACAAIAAAADAP7/AwACAAIAAAAEAP7/AwACAAIAAAAFAP7/AwACAAIAAAAGAP7/AwACAAIAAAAHAP7/AwACAAIAAAA=")
tile_set = ExtResource("1_fpqf5")
script = ExtResource("3_nlbgg")

[node name="steps" parent="level1" instance=ExtResource("3_xy2vu")]
position = Vector2(32, 240)
layer1 = 2097152
collision_layer = 4194304
layer2 = 8388608

[node name="level rail" type="TileMapLayer" parent="level1"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAHAAsABAADAAAAAAAHAAoABAAEAAAAAAAHAAkABAAFAAAAAAAHAAUABAAEAAAAAAAHAAMABAAEAAAAAAAHAAEABAAEAAAAAAAHAP//BAAHAAMAAAAHAAAABAAFAAAAAAAHAAIABAAFAAAAAAAHAAQABAAFAAAAAAAHAAgABAAGAAAAAAAGAAsABAACAAAAAAAFAAsABAABAAAAAAADAAsABAABAAAAAAACAAsABAABAAAAAAABAAsABAAIAAMAAAABAP//BAADAAIAAAAEAAsABAACAAAAAAABAAkABAAGAAIAAAABAAcABAAGAAIAAAABAAUABAAGAAIAAAABAAMABAAGAAIAAAABAAEABAAGAAIAAAABAAAABAAEAAMAAAABAAIABAAEAAMAAAABAAoABAAEAAMAAAABAAgABAAEAAMAAAABAAYABAAEAAMAAAABAAQABAAEAAMAAAACAP//BAACAAMAAAAEAP//BAACAAMAAAAGAP//BAACAAMAAAAFAP//BAAAAAIAAAADAP//BAAAAAIAAAA=")
tile_set = ExtResource("1_fpqf5")

[node name="level2" type="TileMapLayer" parent="level1"]
visible = false
z_index = 2
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAFAAYAAAACAAEAAAAGAAYAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAFAAMAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAKAAMAAAACAAEAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAALAAMAAAACAAEAAAALAAQAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAEAAAAMAAMAAAACAAEAAAAMAAQAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAACAAEAAAANAAMAAAACAAEAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAACAAEAAAAOAAMAAAACAAEAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAAOAAAAAAACAAEAAAAOAAEAAAACAAEAAAAOAAIAAAACAAEAAAAEAAcAAwAEAAQAAAAFAAcAAwAEAAQAAAAGAAcAAwAEAAQAAAAHAAcAAwAEAAQAAAAIAAcAAwAEAAQAAAAJAAcAAwAEAAQAAAAKAAcAAwAEAAQAAAALAAcAAwAEAAQAAAAMAAcAAwAEAAQAAAANAAcAAwAEAAQAAAAOAAcAAwAEAAQAAAAPAAYAAwAEAAUAAAAPAAUAAwAEAAUAAAAPAAQAAwAEAAUAAAAPAAMAAwAEAAUAAAAPAAIAAwAEAAUAAAAPAAEAAwAEAAUAAAAPAAAAAwAEAAUAAAAPAP//AwAEAAUAAAADAAYAAwAEAAMAAAADAAUAAwAEAAMAAAADAAQAAwAEAAMAAAADAAMAAwAEAAMAAAAEAAIAAwAEAAIAAAAFAAIAAwAEAAIAAAAGAAIAAwAEAAIAAAAHAAIAAwAEAAIAAAAIAAIAAwAEAAIAAAAJAAIAAwAEAAIAAAAKAAIAAwAEAAIAAAALAAIAAwAEAAIAAAAMAAIAAwAEAAkAAAAMAAEAAwAEAAMAAAAMAAAAAwAEAAMAAAAMAP//AwAEAAMAAAANAP//AAACAAEAAAAOAP//AAACAAEAAAANAP7/AAACAAEAAAANAP3/AAACAAEAAAANAPz/AAACAAEAAAANAPv/AAACAAEAAAANAPr/AAACAAEAAAAOAP7/AAACAAEAAAAOAP3/AAACAAEAAAAOAPz/AAACAAEAAAAOAPv/AAACAAEAAAAOAPr/AAACAAEAAAAMAPr/AAACAAEAAAALAPr/AAACAAEAAAAKAPr/AAACAAEAAAAJAPr/AAACAAEAAAAIAPr/AAACAAEAAAAHAPr/AAACAAEAAAAGAPr/AAACAAEAAAAFAPr/AAACAAEAAAAEAPr/AAACAAEAAAADAPr/AAACAAEAAAACAPr/AAACAAEAAAABAPr/AAACAAEAAAAOAPn/AAACAAEAAAANAPn/AAACAAEAAAAMAPn/AAACAAEAAAALAPn/AAACAAEAAAAKAPn/AAACAAEAAAAJAPn/AAACAAEAAAAIAPn/AAACAAEAAAAHAPn/AAACAAEAAAAGAPn/AAACAAEAAAAFAPn/AAACAAEAAAAEAPn/AAACAAEAAAADAPn/AAACAAEAAAACAPn/AAACAAEAAAABAPn/AAACAAEAAAAAAPr/AAACAAEAAAAAAPn/AAACAAEAAAD///r/AAACAAEAAAD+//r/AAACAAEAAAD9//r/AAAAAAAAAAD8//r/AAACAAEAAAD7//r/AAACAAEAAAD6//r/AAACAAEAAAD5//7/AAACAAEAAAD6//7/AAACAAEAAAD7//7/AAACAAEAAAD8//7/AAACAAEAAAD8/wEAAAACAAEAAAD8/wAAAAACAAEAAAD8////AAACAAEAAAD7/wEAAAACAAEAAAD6/wEAAAACAAEAAAD5/wEAAAACAAEAAAD5/wAAAAACAAEAAAD5////AAACAAEAAAD6/wAAAAACAAEAAAD7/wAAAAACAAEAAAD4/wEAAAACAAEAAAD4/wAAAAACAAEAAAD4////AAACAAEAAAD4//7/AAACAAEAAAD4//3/AAACAAEAAAD4//z/AAACAAEAAAD4//v/AAACAAEAAAD4//r/AAACAAEAAAD5//r/AAACAAEAAAD3//n/AAACAAEAAAD4//n/AAACAAEAAAD5//n/AAACAAEAAAD6//n/AAACAAEAAAD7//n/AAACAAEAAAD8//n/AAACAAEAAAD9//n/AAACAAEAAAD+//n/AAACAAEAAAD///n/AAACAAEAAAD5//3/AAACAAEAAAD6//3/AAACAAEAAAD7//3/AAACAAEAAAD8//3/AAACAAEAAAD9//3/AAACAAEAAAD9//7/AAAAAAAAAAD9////AAACAAEAAAD9/wAAAAACAAEAAAD9/wEAAAAAAAAAAAD3//r/AAACAAEAAAD3//v/AAACAAEAAAD3//z/AAACAAEAAAD3//3/AAACAAEAAAD3//7/AAACAAEAAAD3////AAACAAEAAAD3/wAAAAACAAEAAAD3/wEAAAACAAEAAAD5//z/AwAEAAYAAAD6//z/AwAEAAIAAAD7//z/AwAEAAIAAAD8//z/AwAEAAIAAAD9//z/AwAEAAIAAAD+//3/AwAEAAUAAAD+//7/AwAEAAUAAAD+////AwAEAAUAAAD+/wAAAwAEAAUAAAD+/wEAAwAEAAUAAAD3/wIAAwAEAAQAAAD4/wIAAwAEAAQAAAD5/wIAAwAEAAQAAAD6/wIAAwAEAAQAAAD7/wIAAwAEAAQAAAD8/wIAAwAEAAQAAAD9/wIAAwAEAAQAAAD2/wEAAwAEAAMAAAD2/wAAAwAEAAMAAAD2////AwAEAAMAAAD2//7/AwAEAAMAAAD2//3/AwAEAAMAAAD2//z/AwAEAAMAAAD2//v/AwAEAAMAAAD2//r/AwAEAAMAAAD2//n/AwAEAAMAAAD5//v/AwAEAAgAAAD6//v/AwAEAAQAAAD7//v/AwAEAAQAAAD8//v/AwAEAAQAAAD9//v/AwAEAAQAAAD+//v/AwAEAAQAAAD///v/AwAEAAQAAAAAAPv/AwAEAAQAAAAFAPv/AwAEAAQAAAAGAPv/AwAEAAQAAAAEAPv/AwAEAAQAAAADAPv/AwAEAAQAAAACAPv/AwAEAAQAAAABAPv/AwAEAAQAAAD3//j/AwAEAAIAAAD4//j/AwAEAAIAAAD5//j/AwAEAAIAAAD6//j/AwAEAAIAAAD7//j/AwAEAAIAAAD8//j/AwAEAAIAAAD9//j/AwAEAAIAAAD+//j/AwAEAAIAAAD///j/AwAEAAIAAAAAAPj/AwAEAAIAAAABAPj/AwAEAAIAAAACAPj/AwAEAAIAAAADAPj/AwAEAAIAAAAEAPj/AwAEAAIAAAAHAPv/AwAEAAQAAAAIAPv/AwAEAAQAAAAJAPv/AwAEAAQAAAAKAPv/AwAEAAQAAAALAPv/AwAEAAQAAAAMAPv/AwAEAAcAAAAMAPz/AwAEAAMAAAAMAP3/AwAEAAMAAAAMAP7/AwAEAAMAAAAFAPj/AwAEAAIAAAAGAPj/AwAEAAIAAAAHAPj/AwAEAAIAAAAIAPj/AwAEAAIAAAAJAPj/AwAEAAIAAAAKAPj/AwAEAAIAAAALAPj/AwAEAAIAAAAMAPj/AwAEAAIAAAANAPj/AwAEAAIAAAAOAPj/AwAEAAIAAAAPAPn/AwAEAAUAAAAPAPr/AwAEAAUAAAAPAPv/AwAEAAUAAAAPAPz/AwAEAAUAAAAPAP3/AwAEAAUAAAAPAP7/AwAEAAUAAAA=")
tile_set = ExtResource("1_fpqf5")
script = ExtResource("3_nlbgg")

[node name="collision mask" type="TileMapLayer" parent="level1/level2"]
z_index = 3
tile_map_data = PackedByteArray("AAD9/wEAAwAEAAEAAAD9//7/AwAEAAEAAAD9//r/AwAEAAEAAAA=")
tile_set = ExtResource("1_fpqf5")

[node name="pilar1" parent="level1" instance=ExtResource("6_25uw4")]
position = Vector2(-32, 240)

[node name="pilar2" parent="level1" instance=ExtResource("6_25uw4")]
position = Vector2(64, 192)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
